@@ -3,7 +3,7 @@ use warnings;
 use FFI::TinyCC;
 use FFI::Platypus;
 
-my $ffi = FFI::Platypus->new;
+my $ffi = FFI::Platypus->new( api => 1 );
 my $tcc = FFI::TinyCC->new;
 
 $tcc->compile_string(q{
